comment and complete READMEs

--- a/experiments/taming_transformers/data_generation_and_aug.ipynb
+++ b/experiments/taming_transformers/data_generation_and_aug.ipynb
@@ -70,6 +70,8 @@
    "execution_count": 25,
    "outputs": [],
    "source": [
+    "# Código obtenido del repositorio del paper Taming Transformers for High-Resolution Image Synthesis (https://github.com/CompVis/taming-transformers)\n",
+    "# ---- Inicio del código ----\n",
     "def resize_with_padding(img, required_size):\n",
     "    img.thumbnail((required_size, required_size))\n",
     "    delta_w = required_size - img.size[0]\n",
@@ -78,6 +80,7 @@
     "    pad_h = delta_h // 2\n",
     "    padding = (pad_w, pad_h, delta_w - pad_w, delta_h - pad_h)\n",
     "    return ImageOps.expand(img, padding, fill=(255,255,255))\n",
+    "# ---- Fin del código ----\n",
     "\n",
     "def apply_resize(images_path, preprocess_folder=\"preprocess\", required_size=192):\n",
     "    preprocess_folder = preprocess_folder + \"/\"\n",
