--- a/experiments/taming_transformers/sample_and_clean_molecules.ipynb
+++ b/experiments/taming_transformers/sample_and_clean_molecules.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Cambiamos el directorio de trabajo (en el servidor ngpu.ugr.es)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -51,6 +60,17 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Generación de hard negatives\n",
+    "\n",
+    "Generamos 50 hard negatives a partir de 8 ruidos de Perlín diferentes"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
